--- a/svc/hecate/src/common/components/system-chat/system-chat.module.scss
+++ b/svc/hecate/src/common/components/system-chat/system-chat.module.scss
@@ -241,7 +241,7 @@ $text-color: #c8c8d0;
           }
         }
 
-        &.critical {
+        &.critical, &.error {
           border-left-color: rgba($echo-red, 0.3);
           .system {
             color: $echo-red;
