--- a/svc/hecate/src/common/components/system-chat/system-chat.module.scss
+++ b/svc/hecate/src/common/components/system-chat/system-chat.module.scss
@@ -296,10 +296,13 @@ $text-color: #c8c8d0;
       border-top: 1px solid rgba($echo-blue, 0.1);
       padding: 0.5rem 0;
       min-height: 3.5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       
       input {
-        width: calc(100% - 2rem);
-        margin: 0 1rem;
+        width: calc(100% - 4rem);
+        margin: 0 auto;
         background: rgba($background-dark, 0.2);
         border: 1px solid rgba($echo-blue, 0.2);
         color: $echo-blue;
@@ -323,7 +326,7 @@ $text-color: #c8c8d0;
       
       .invalidText {
         position: absolute;
-        right: 3rem;
+        right: 2.5rem;
         top: 50%;
         transform: translateY(-50%);
         color: rgba($echo-red, 0.7);
