--- a/svc/hecate/src/common/components/echo/echo.module.scss
+++ b/svc/hecate/src/common/components/echo/echo.module.scss
@@ -10,6 +10,103 @@ $echo-green: #00ff9d;
 $echo-gray: #808080;
 $text-color: #c8c8d0;
 
+// Theme Variables
+$null-bg: rgba(0, 0, 0, 0.9);
+$null-border: $echo-blue;
+$null-text: $text-color;
+
+$matrix-bg: rgba(0, 0, 0, 0.95);
+$matrix-border: #00ff00;
+$matrix-text: #00ff00;
+
+$cyber-bg: rgba(0, 0, 0, 0.9);
+$cyber-border: #ff00ff;
+$cyber-text: #00ffff;
+
+$light-bg: rgba(255, 255, 255, 0.95);
+$light-border: #666;
+$light-text: #333;
+$light-accent: #2a4a6a;
+$light-hover: rgba(42, 74, 106, 0.1);
+$light-disabled: #999;
+$light-shadow: rgba(0, 0, 0, 0.1);
+
+// Theme Mixins
+@mixin theme-colors($bg, $border, $text, $accent: $border, $hover: rgba($border, 0.1), $disabled: rgba($text, 0.5), $shadow: rgba(0, 0, 0, 0.3)) {
+  .hudWindow {
+    background-color: rgba($bg, 0.06);
+    border-color: rgba($border, 0.1);
+    color: $text;
+  }
+  
+  .controlPanel {
+    border-color: rgba($border, 0.2);
+    
+    .controlButton {
+      color: $accent;
+      
+      &:hover:not(.disabled) {
+        background: $hover;
+      }
+      
+      &.active {
+        background: $hover;
+        font-weight: bold;
+      }
+      
+      &.disabled {
+        color: $disabled;
+      }
+    }
+  }
+  
+  .userProfile {
+    border-color: rgba($border, 0.2);
+    
+    .profileLabel {
+      color: $accent;
+    }
+    
+    .profileValue {
+      color: $text;
+    }
+  }
+  
+  .statusIndicator {
+    &.active {
+      background-color: $accent;
+    }
+    
+    &.inactive {
+      background-color: $disabled;
+    }
+  }
+  
+  .alertButton {
+    color: $echo-red;
+    
+    &:hover {
+      background: rgba($echo-red, 0.1);
+    }
+  }
+  
+  .expandButton {
+    color: $accent;
+    
+    &:hover {
+      background: $hover;
+    }
+  }
+  
+  .disconnectButton {
+    color: $echo-red;
+    
+    &:hover {
+      background: rgba($echo-red, 0.1);
+    }
+  }
+}
+
 .echoContainer {
   position: fixed;
   z-index: 1002;
@@ -20,6 +117,37 @@ $text-color: #c8c8d0;
   display: flex;
   flex-direction: column;
   gap: 2px;
+  
+  &.null {
+    @include theme-colors($null-bg, $null-border, $null-text);
+  }
+  
+  &.matrix {
+    @include theme-colors($matrix-bg, $matrix-border, $matrix-text);
+    
+    .hudWindow {
+      background-image: linear-gradient(rgba($matrix-border, 0.006) 2px, transparent 2px),
+                      linear-gradient(90deg, rgba($matrix-border, 0.006) 2px, transparent 2px);
+    }
+  }
+  
+  &.cyber {
+    @include theme-colors($cyber-bg, $cyber-border, $cyber-text);
+    
+    .hudWindow {
+      background-image: linear-gradient(rgba($cyber-border, 0.006) 2px, transparent 2px),
+                      linear-gradient(90deg, rgba($cyber-border, 0.006) 2px, transparent 2px);
+    }
+  }
+  
+  &.light {
+    @include theme-colors($light-bg, $light-border, $light-text, $light-accent, $light-hover, $light-disabled, $light-shadow);
+    
+    .hudWindow {
+      background-image: linear-gradient(rgba($light-border, 0.006) 2px, transparent 2px),
+                      linear-gradient(90deg, rgba($light-border, 0.006) 2px, transparent 2px);
+    }
+  }
 
   .hudWindow {
     position: relative;
@@ -774,5 +902,17 @@ $text-color: #c8c8d0;
   }
   100% {
     box-shadow: 0 0 0 0 rgba($echo-red, 0);
+  }
+}
+
+.theme {
+  &-null {
+    background-color: #000;
+    color: #0f0;
+  }
+
+  &-light {
+    background-color: #fff;
+    color: #000;
   }
 }
